# eii-zmq-broker

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app_spec.json  config.json  docker-compose.yml  k8s-service.yml  module_spec.json  schema.json
examples/: ipc_backend_example.json  ipc_frontend_example.json  tcp_backend_example.json  tcp_frontend_example.json
helm/: values.yaml
helm/templates/: zmqbroker.yaml
include/eii/zmqbroker/: broker.h  common.h  config.h  socket.h  zap.h
include/eis/zmqbroker/: broker.h  common.h  zap.h
src/: broker.cpp  common.cpp  config.cpp  main.cpp  socket.cpp  zap.c
tests/: CMakeLists.txt  broker_tests.cpp
tests/configs/: backend_ipc.json  backend_tcp_no_security.json  backend_tcp_security_auth.json  backend_tcp_security_no_auth.json  frontend_ipc.json  frontend_tcp_no_security.json  frontend_tcp_security_auth.json  frontend_tcp_security_no_auth.json  msgbus_ipc_publisher.json  msgbus_ipc_subscriber.json  msgbus_tcp_publisher_no_security.json  msgbus_tcp_publisher_security.json  msgbus_tcp_subscriber_no_security.json  msgbus_tcp_subscriber_security.json
